xoa bot vai thu

--- a/_data/categories.yml
+++ b/_data/categories.yml
@@ -1,18 +1,10 @@
 - slug: maths
   name: Toán
-- slug: matlab
-  name: Matlab
 - slug: phd
   name: PhD
+- slug: it
+  name: CNTT
 - slug: french
   name: French
-- slug: python
-  name: Python
-- slug: latex
-  name: LaTeX
-- slug: freefempp
-  name: FreeFEM++
-- slug: gnuplot
-  name: Gnuplot
 - slug: articles
   name: Bài viết hay
