sửa link profile avatar

--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository: dinhanhthi/self-note
 paginate: 28
 
 # MatJek specific configurations
-github_profile: "https://dinhanhthi.com"
+github_profile: "https://note.dinhanhthi.com"
 user: "Dinh Anh Thi"
 user_email: "dinhanhthimail@gmail.com"
 contact_url: "https://dinhanhthi.com"
