ud + change url

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Notes of Thi
 description: You cannot remember everything.
 baseurl: ""
-url: "http://note.dinhanhthi.com"
+url: "http://mynote.dinhanhthi.com"
 repository: dinhanhthi/self-note
 
 invisible: 1 # remove '#' if you want your site is invisible to search engine
