--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ favicon: "/assets/res/favicon.png" # site's favicon (icon left side of your page
 
 # MatJek specific configurations
 user: 
-  name: "Dinh Anh Thi"
+  name: "Anh-Thi DINH"
   email: "dinhanhthimail@gmail.com"
   website: "dinhanhthi.com"
   avatar: "/assets/res/user.png"
