change categories and add web cat

--- a/_data/categories.yml
+++ b/_data/categories.yml
@@ -4,9 +4,11 @@
   name: PhD
 - slug: it
   name: Infomation Technology
+- slug: web
+  name: Web development
 - slug: french
   name: French
-- slug: articles
+- slug: article
   name: Good articles
 - slug: notetheme
   name: NoteTheme 
