--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ favicon: "/assets/res/favicon.png" # site's favicon (icon left side of your page
 # MatJek specific configurations
 user: 
   name: "Anh-Thi DINH"
-  email: "dinhanhthimail@gmail.com"
+  email: "dinhanhthi@gmail.com"
   website: "dinhanhthi.com"
   avatar: "/assets/res/user.png"
   github: "dinhanhthi"
