--- a/_config.yml
+++ b/_config.yml
@@ -16,8 +16,8 @@ user:
   website: "dinhanhthi.com"
   avatar: "/assets/res/user.png"
   github: "dinhanhthi"
-google_tracking_id: ""
-google_site_verification: ""
+google_tracking_id: "UA-58921685-4"
+google_site_verification: "Ek2P4vaiWDidQjWUKkRCayJA-bdWKEoHyZL5kbJ5bK0"
 disqus_shortname: note-thi
 
 # Build settings
@@ -28,13 +28,13 @@ permalink: /:title
 plugins:
   - jekyll-feed
   - jekyll-paginate
-  - jekyll-seo-tag
   - jekyll-sitemap
-  - jekyll-archives
-  - jekyll-redirect-from
+
 exclude:
   - Gemfile
   - Gemfile.lock
+  - CNAME
+
 sass:
   style: compressed
 future: true
