--- a/_config.yml
+++ b/_config.yml
@@ -26,9 +26,9 @@ highlighter: rouge
 permalink: /:title
 
 plugins:
-  - jekyll-feed
   - jekyll-paginate
-  - jekyll-sitemap
+  # - jekyll-sitemap
+  # - jekyll-feed
 
 exclude:
   - Gemfile
